ng add @angular/pwa Updates to index.html for PWA Favicons Env setup

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Db</title>
+  <title>Dustin's Lab</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="description" content="Programming + Confusion = Website">
 </head>
 <body>
   <app-root></app-root>
+  <noscript>JavaScript required.</noscript>
 </body>
 </html>
