Some work on the featured part

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <meta name="description" content="Programming + Confusion = Website">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
